# rss-scrapers

./: .gitignore  Cargo.toml  LICENSE  README.md  gelbooru-aw-rss-updater.py  gelbooru-rss.toml.sample  go.mod  go.sum  main.go  mangadex-aw-rss-updater.py  qq-rss.toml.sample  seasonal-anime-rss.toml.sample
amiami-rss/: main.go
awkward-rss/: main.go
fiction-rss/: main.go
gelbooru-rss/: main.go
jnovel-rss/: main.go
mangadex-rss/: main.go  mangadex-aw-rss-updater.py
mangaplus-rss/: main.go
panda-rss/: main.go  panda-rss.toml.sample
royalroad-rss/: main.go
seasonal-anime-rss/: main.go  seasonal-anime-rss.toml.sample
src/: ao3.rs  gelbooru.rs  jnovel.rs  main.rs  mangadex.rs  qq.rs  royalroad.rs  seasonal_anime.rs  tfgames.rs  vn_news.rs
tfgames-rss/: main.go
vn-news-rss/: main.go
webnovel-rss/: main.go
