[package]
name = "rss-scrapers"
version = "0.1.0"
edition = "2021"

[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
html-escape = "0.2.13"
once_cell = "1.20.2"
regex = "1.11.1"
# Each scraper only makes a few requests and doing one at a time is better for the servers
reqwest = { version = "0.12.9", features = ["blocking", "brotli", "cookies", "deflate", "json", "gzip", "multipart"] }
reqwest_cookie_store = "0.8.0"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4"] }
rss = "2.0.10"
scraper = "0.21.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"

