[package]
name = "rss-scrapers"
version = "0.1.0"
edition = "2021"

[dependencies]
awconf = { git = "https://github.com/awused/awconf" }
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
html-escape = "0.2.13"
once_cell = "1.20.3"
regex = "1.11.1"
# Each scraper only makes a few requests and doing one at a time is better for the servers
reqwest = { version = "0.12.12", features = ["blocking", "brotli", "cookies", "deflate", "json", "gzip", "multipart"] }
reqwest_cookie_store = "0.8.0"
rocksdb = { version = "0.23.0", default-features = false, features = ["lz4"] }
rss = "2.0.11"
scraper = "0.22.0"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"

